# illuminator

./: .gitignore  Cargo.toml  README.md
examples/: bvh_example.rs
src/: lib.rs  prelude.rs  vector.rs  vector_ops.rs
src/core/: macros.rs  math.rs  matrix.rs  mod.rs  ops.rs  quaternion.rs  sampling.rs  spherical.rs  tensor.rs  tsrmath.rs  vec.rs
src/gsplat/: gaussian.rs  io.rs  mod.rs  render.rs
src/img/: img_impl.rs  mod.rs  ops.rs  rgb.rs  rgbimage.rs  vt.rs
src/raycast/: bounds.rs  bvh.rs  bvhbuild.rs  gaussian.rs  mod.rs  morton.rs  primitive.rs  sphere.rs
src/render/: camera.rs
src/splat/: gaussian.rs  io.rs  render.rs
