[package]
name = "illuminator"
version = "0.1.0"
edition = "2024"
authors = ["waizui <lch01234@gmail.com>"]
license = "MIT"
repository = "https://github.com/waizui/illuminator"
readme = "README.md"
description = "Reserved for a tracer"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.0", features = ["derive"] }
image = "0.25.6"
num-traits = "0.2.19"
rand = "0.9.1"
rayon = "1.10.0"
