[package]
name = "illuminator"
version = "0.1.1"
edition = "2024"
authors = ["waizui <lch01234@gmail.com>"]
license = "MIT"
repository = "https://github.com/waizui/illuminator"
readme = "README.md"
description = "A simple yet powerful rendering tool"
keywords = ["rendering", "tracer","path-tracing", "ray-tracing", "graphics"]
categories = ["graphics", "rendering"]

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.1",features = [
  "derive", 
  "extern_crate_alloc",
  "min_const_generics",
] }
clap = { version = "4.0", features = ["derive"] }
image = "0.25.6"
num-traits = "0.2.19"
ply-rs = "0.1.3"
rand = "0.9.1"
rayon = "1.10.0"
